fix dropdown showing on smaller devices instead of collapsible

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -1023,6 +1023,10 @@ div.hidden {
     flex-direction: column;
   }
 
+  #category-toggle:checked ~ .dropdown {
+    display: none;
+  }
+
   .dropdown {
     display: none;
   }
